--- a/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
@@ -18,7 +18,7 @@
                         {
                             <input type="hidden" class="availablity" value="true">
                             @*<span>Availability:</span>*@
-                            @((availableProductCount <= 10 ? "only "+ availableProductCount.ToString("#") + " items left" : "Available"))
+                            @((availableProductCount <= 10 ? "only " + availableProductCount.ToString("#") + " items left" : "Available"))
                         }
                         else
                         {
@@ -83,21 +83,21 @@
     {
         if (!Ganedata.Core.Services.Inventory.IsProductInNotifyList(Model.SelectedProduct, ViewBag.CurrentUserId))
         {
-            <button class="btmbtn sho" onclick="addToNotifyList(@Model.SelectedProduct.ProductId, @Model.BaseProductId); hidePopup();" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="font-size: 28px;"></i></button>
+            <button class="btmbtn sho" onclick="addToNotifyList(@Model.SelectedProduct.ProductId, @Model.BaseProductId); hidePopup();" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon"></i></button>
         }
         else
         {
-            <button class="btmbtn sho" onclick="redirectToWishListByConfirmation()" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:red; font-size: 28px;"></i></button>
+            <button class="btmbtn sho" onclick="redirectToWishListByConfirmation()" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:red;"></i></button>
         }
     }
 
     @if (!Ganedata.Core.Services.Inventory.IsProductInWishList(Model.SelectedProduct, ViewBag.CurrentUserId))
     {
-        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="addToWishList(@Model.SelectedProduct.ProductId, @Model.BaseProductId); hidePopup();"><i class="icon-love list-icon" style="font-size: 28px;"></i></button>
+        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="addToWishList(@Model.SelectedProduct.ProductId, @Model.BaseProductId); hidePopup();"><i class="icon-love list-icon"></i></button>
     }
     else
     {
-        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="redirectToWishListByConfirmation()"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></button>
+        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="redirectToWishListByConfirmation()"><i class="icon-love list-icon" style="color: red;"></i></button>
     }
 </div>
 
