--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -95,13 +95,15 @@
                                         </a>
                                     </h3>
                                     <div class="foot">
-                                        <a class="prd_amnt" href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">
-                                            @ViewBag.CurrencySymbol@item.SellPrice
-                                        </a>
-                                        @if (item.ProductType != ProductKitTypeEnum.Grouped && item.ProductType != ProductKitTypeEnum.Kit)
-                                        {
-                                            <ul class="icolist">
-                                                @if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@item, ViewBag.SiteId) && item.ProductType != ProductKitTypeEnum.ProductByAttribute)
+                                        <ul class="icolist">
+                                            <li>
+                                                <a class="prd_amnt" href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">
+                                                    @ViewBag.CurrencySymbol@item.SellPrice
+                                                </a>
+                                            </li>
+                                            @if (item.ProductType != ProductKitTypeEnum.Grouped && item.ProductType != ProductKitTypeEnum.Kit)
+                                            {
+                                                if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@item, ViewBag.SiteId) && item.ProductType != ProductKitTypeEnum.ProductByAttribute)
                                                 {
                                                     <li>
                                                         <a href="javascript:;" onclick="addToCart(@item.ProductId)"><i class="cart-icon icon-shopping-cart"></i></a>
@@ -134,20 +136,21 @@
 
                                                 }
 
-                                                @if (!Ganedata.Core.Services.Inventory.IsProductInWishList(@item, ViewBag.CurrentUserId))
+                                                if (!Ganedata.Core.Services.Inventory.IsProductInWishList(@item, ViewBag.CurrentUserId))
                                                 {
                                                     <li>
-                                                        <a href="javascript:;" id="wish_@item.ProductId" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "addToWishList(" + item.ProductId + ")" : "showProductByAttributeSelector('" + item.SKUCode + "', true)")"><i class="icon-love list-icon" style="color: black;font-size: 28px;"></i></a>
+                                                        <a href="javascript:;" id="wish_@item.ProductId" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "addToWishList(" + item.ProductId + ")" : "showProductByAttributeSelector('" + item.SKUCode + "', true)")"><i class="icon-love list-icon" style="color: black;"></i></a>
                                                     </li>
                                                 }
                                                 else
                                                 {
                                                     <li>
-                                                        <a href="javascript:;" id="wish_@item.ProductId" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "redirectToWishListByConfirmation()" : "showProductByAttributeSelector('" + item.SKUCode + "', true)")"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></a>
+                                                        <a href="javascript:;" id="wish_@item.ProductId" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "redirectToWishListByConfirmation()" : "showProductByAttributeSelector('" + item.SKUCode + "', true)")"><i class="icon-love list-icon" style="color: red;"></i></a>
                                                     </li>
                                                 }
-                                            </ul>
-                                        }
+                                            }
+                                        </ul>
+
                                     </div>
                                 </div>
                             </div>
@@ -167,7 +170,7 @@
                             </div>
                             <div class="col-sm-6 col-xs-6 text-right tot">
                                 @*Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber*@
-                                <p>Showing @( Model.FirstItemOnPage) to @Model.PageSize of @(Model.TotalItemCount)</p>
+                                <p>Showing @(Model.FirstItemOnPage) to @Model.PageSize of @(Model.TotalItemCount)</p>
                             </div>
                         </div>
                     }
